--- a/src/tailwindcss/style.css
+++ b/src/tailwindcss/style.css
@@ -1,158 +1,157 @@
 @import "tailwindcss";
-
+@config "../../tailwind.config.js";
 @tailwind utilities;
 
 :root {
-    --background: #fff;
-    --foreground: #686868;
-    --primary: #F7941E;
-    --primary-foreground: #F7941E;
-    --secondary: #1CBBB4;
-    --secondary-foreground: #1CBBB4;
-    --destructive: #ED145B;
-    --destructive-foreground: #ED145B;
-    --green: #73BE48;
-    --green-foreground: #73BE48;
-    --warm: #FFF0E5;
-    --cream-foreground: #fff;
-    --muted: #000;
-    --muted-foreground: #000;
+  --background: #fff;
+  --foreground: #686868;
+  --primary: #f7941e;
+  --primary-foreground: #f7941e;
+  --secondary: #1cbbb4;
+  --secondary-foreground: #1cbbb4;
+  --destructive: #ed145b;
+  --destructive-foreground: #ed145b;
+  --green: #73be48;
+  --green-foreground: #73be48;
+  --warm: #fff0e5;
+  --cream-foreground: #fff;
+  --muted: #000;
+  --muted-foreground: #000;
 }
 
 /* ------- btn style with hover start ------- */
 
 .btn {
-    position: relative;
-    z-index: 10;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    transition: all 0.5s ease-in-out;
-    padding: 20px 30px;
-    border-radius: 6px;
-    overflow: hidden;
-    max-height: 60px;
+  position: relative;
+  z-index: 10;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  transition: all 0.5s ease-in-out;
+  padding: 20px 30px;
+  border-radius: 6px;
+  overflow: hidden;
+  max-height: 60px;
 }
 
 .btn::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-color: var(--secondary);
-    width: 0%;
-    height: 100%;
-    z-index: -1;
-    transition: all 0.5s ease-in-out;
-    border-radius: 6px;
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: var(--secondary);
+  width: 0%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.5s ease-in-out;
+  border-radius: 6px;
 }
 
 .btn:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
 .btn:hover {
-    color: var(--cream-foreground);
+  color: var(--cream-foreground);
 }
 
 .btn-rounded-full {
-    max-height: 60px;
-    z-index: 10;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    transition: all 0.5s ease-in-out;
-    padding: 20px 30px;
-    border-radius: 45px;
-    background-color: var(--primary);
-    color: var(--cream-foreground);
-    line-height: normal;
-    border: 2px solid transparent;
+  max-height: 60px;
+  z-index: 10;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  transition: all 0.5s ease-in-out;
+  padding: 20px 30px;
+  border-radius: 45px;
+  background-color: var(--primary);
+  color: var(--cream-foreground);
+  line-height: normal;
+  border: 2px solid transparent;
 }
 
 .btn-rounded-full:hover {
-    background-color: transparent;
-    color: var(--primary-foreground);
-    border: 2px solid var(--primary);
+  background-color: transparent;
+  color: var(--primary-foreground);
+  border: 2px solid var(--primary);
 }
 
-@media(max-width:1024px) {
-
-    .btn,
-    .btn-rounded-full {
-        padding: 10px 30px;
-    }
+@media (max-width: 1024px) {
+  .btn,
+  .btn-rounded-full {
+    padding: 10px 30px;
+  }
 }
 
 @keyframes left-right {
-    50% {
-        transform: translateX(14px);
-    }
+  50% {
+    transform: translateX(14px);
+  }
 }
 
 .animate-left-right {
-    animation: left-right 2s linear infinite;
+  animation: left-right 2s linear infinite;
 }
 
 @keyframes left-right-2 {
-    50% {
-        transform: translateX(-40px);
-    }
+  50% {
+    transform: translateX(-40px);
+  }
 }
 
 .animate-left-right-2 {
-    animation: left-right-2 4s linear infinite;
+  animation: left-right-2 4s linear infinite;
 }
 
 @keyframes skw {
-    0%,
-    100% {
-        transform: skewX(0deg);
-    }
+  0%,
+  100% {
+    transform: skewX(0deg);
+  }
 
-    50% {
-        transform: skewX(5deg);
-    }
+  50% {
+    transform: skewX(5deg);
+  }
 }
 
 .animate-skw {
-    animation: skw 2s linear infinite;
+  animation: skw 2s linear infinite;
 }
 
 @keyframes up-down {
-    50% {
-        transform: translateY(-10px);
-    }
+  50% {
+    transform: translateY(-10px);
+  }
 }
 
 .animate-up-down {
-    animation: up-down 2s linear infinite;
+  animation: up-down 2s linear infinite;
 }
 
-.font-bubblegum-sans{
+.font-bubblegum-sans {
   font-family: Bubblegum Sans;
 }
 
-.font-jost{
+.font-jost {
   font-family: Jost;
 }
 
-.font-nunito{
+.font-nunito {
   font-family: Nunito;
 }
-.after\:bg-testimonial-banner::after{
+.after\:bg-testimonial-banner::after {
   content: var(--tw-content);
-  background-image: url('/assets/img/ascent-tailwind/bg-img1.png');
+  background-image: url("/assets/img/ascent-tailwind/bg-img1.png");
 }
 
-.after\:bg-cover::after{
+.after\:bg-cover::after {
   content: var(--tw-content);
   background-size: cover;
 }
 
-.after\:bg-no-repeat::after{
+.after\:bg-no-repeat::after {
   content: var(--tw-content);
   background-repeat: no-repeat;
 }
